panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_redeclaration_of_typedef_with_function_declaration_in_same_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_declaration_in_same_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_declaration_in_same_scope.c"
   (typedef a `int`)
   (redeclared a)
   (declaration b~0 `fn() -> int` ∅)
   (redeclared b)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (typedef c `int`)
         (redeclared c)
         (declaration d~3 `fn() -> int` ∅)
         (redeclared d))))

----- stderr -----
