panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_error_redeclaration_of_typedef_with_function_pointer_uses_value_in_message.c"
   (declaration a~0 `ptr<fn() -> int>` ∅)
   (redeclared a)
   (typedef b `int`)
   (redeclared b)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration c~3 `ptr<fn() -> int>` ∅)
         (redeclared c)
         (typedef d `int`)
         (redeclared d))))

----- stderr -----
