panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_redeclaration_with_different_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_redeclaration_with_different_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_error_redeclaration_with_different_type.c"
   (typedef in_global_scope `long`)
   (typedef in_global_scope `long const`)
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef in_local_scope `int`)
         (typedef in_local_scope `int const`))))

----- stderr -----
