panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_shadow_typedef_in_inner_scope_parenthesised.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_error_shadow_typedef_in_inner_scope_parenthesised.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef name `int`)
         (compound-statement
            (declaration name~2 `fn() -> fn() -> int` ∅))
         (compound-statement
            (declaration name~3 `array<fn() -> int; 42>` ∅)))))

----- stderr -----
