panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_shadow_typedef_in_inner_scope_parenthesised_in_parameter_list.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (typedef name `int`)
         (compound-statement
            (declaration f~2 `fn(∅: fn() -> int) -> int` ∅)
            (declaration g~3 `fn(∅: fn(∅: int) -> int) -> int` ∅)
            (declaration h~4 `fn(∅: fn(∅: int) -> int) -> int` ∅)
            (declaration i~5 `fn(name: int) -> int` ∅)))))

----- stderr -----
