panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_typedef_in_nested_function_declarator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_typedef_in_nested_function_declarator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_typedef_in_nested_function_declarator.c"
   (typedef a `int`)
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `fn(a: fn(a: fn(a: int) -> int) -> int) -> int` ∅))))

----- stderr -----
